// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post activity success: pending to send: activity 1`] = `
Array [
  Object {
    "channelData": Object {
      "clientActivityID": "4feornb",
    },
    "from": Object {
      "id": "default-user",
      "name": "John Doe",
    },
    "text": "Hello, World!",
    "timestamp": "2000-01-01T00:00:01.000Z",
    "type": "message",
  },
]
`;

exports[`Post activity success: pending to send: store 1`] = `
Array [
  Object {
    "channelData": Object {
      "clientActivityID": "4feornb",
      "state": "sending",
    },
    "from": Object {
      "id": "default-user",
      "name": "John Doe",
    },
    "text": "Hello, World!",
    "timestamp": "2000-01-01T00:00:01.000Z",
    "type": "message",
  },
]
`;

exports[`Post activity success: send completed: actions 1`] = `
Array [
  Object {
    "payload": Object {
      "activity": Object {
        "text": "Hello, World!",
        "type": "message",
      },
    },
    "type": "DIRECT_LINE/POST_ACTIVITY",
  },
  Object {
    "meta": Object {
      "clientActivityID": "4feornb",
    },
    "type": "DIRECT_LINE/POST_ACTIVITY_PENDING",
  },
  Object {
    "payload": Object {
      "activity": Object {
        "channelData": Object {
          "clientActivityID": "4feornb",
          "state": "sending",
        },
        "from": Object {
          "id": "default-user",
          "name": "John Doe",
        },
        "text": "Hello, World!",
        "timestamp": "2000-01-01T00:00:01.000Z",
        "type": "message",
      },
    },
    "type": "DIRECT_LINE/INCOMING_ACTIVITY",
  },
  Object {
    "payload": Object {
      "activity": Object {
        "channelData": Object {
          "clientActivityID": "4feornb",
        },
        "from": Object {
          "id": "default-user",
          "name": "John Doe",
        },
        "id": "server-id:123",
        "text": "Hello, World!",
        "timestamp": "2000-01-01T00:00:01.000Z",
        "type": "message",
      },
    },
    "type": "DIRECT_LINE/INCOMING_ACTIVITY",
  },
  Object {
    "meta": Object {
      "clientActivityID": "4feornb",
    },
    "payload": Object {
      "activity": Object {
        "channelData": Object {
          "clientActivityID": "4feornb",
        },
        "from": Object {
          "id": "default-user",
          "name": "John Doe",
        },
        "id": "server-id:123",
        "text": "Hello, World!",
        "timestamp": "2000-01-01T00:00:01.000Z",
        "type": "message",
      },
    },
    "type": "DIRECT_LINE/POST_ACTIVITY_FULFILLED",
  },
]
`;

exports[`Post activity success: send completed: store 1`] = `
Array [
  Object {
    "channelData": Object {
      "clientActivityID": "4feornb",
      "state": "sent",
    },
    "from": Object {
      "id": "default-user",
      "name": "John Doe",
    },
    "id": "server-id:123",
    "text": "Hello, World!",
    "timestamp": "2000-01-01T00:00:01.000Z",
    "type": "message",
  },
]
`;
